# ploutos-testing

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: pkg.yml
adder/: Cargo.toml
docker/: Dockerfile.deb  Dockerfile.rpm
pkg/common/: mytest-ubuntu-noble.mytest.service  mytest-ubuntu-noble.mytest.timer  mytest.mytest.service  mytest.mytest.timer
pkg/debian/: description.txt
pkg/rpm/: scriptlets.toml
pkg/rules/: cross-build-rules.yml  cross-targets.yml  docker-build-rules.yml  docker-images-to-build-no-cross.yml  docker-images-to-build.yml  package-build-and-test-rules.yml  package-build-rules-no-cross.yml  package-build-rules.yml  package-test-rules-no-cross.yml  package-test-rules.yml  packages-to-build-no-cross.yml  packages-to-build.yml  packages-to-test-no-cross.yml  packages-to-test.yml
pkg/test-scripts/: test-myalt.sh  test-mytest.sh
repo/: apt-key.asc  yum-key.asc
repo/linux/centos/8/main/x86_64/: mytest-0.1.0-1.x86_64.rpm
repo/linux/centos/8/main/x86_64/repodata/: 7e16e7acbd7c75331e6a8b44a76ac43abda2aa9b18f68cebc72b30acc1efdcac-primary.sqlite.bz2  8e1590adae2bde62c583f4481c39ebd9bc636e233f47059179646c9668abc8f5-other.sqlite.bz2  b8488fd285a850f8d4a31fbd381ca2deb568e6d11cba13c30c49ac44700a9a46-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc
repo/linux/ubuntu/dists/jammy/: InRelease  Release  Release.gpg
repo/linux/ubuntu/pool/main/: mytest_0.1.0-1jammy_amd64.deb
src/: main.rs
virtual/: Cargo.toml
virtual/addone/: Cargo.toml
virtual/addone/src/: lib.rs
virtual/app/: Cargo.toml
virtual/app/src/: main.rs
(+1 files in other folders)
